[gd_scene load_steps=2 format=2]

[ext_resource path="res://nodes/bits/port/port.gd" type="Script" id=1]

[node name="port" type="Node2D"]
script = ExtResource( 1 )

[node name="control" type="Control" parent="."]
margin_left = -5.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 5.0
[connection signal="gui_input" from="control" to="." method="_on_control_gui_input"]
[connection signal="mouse_entered" from="control" to="." method="_on_control_mouse_entered"]
[connection signal="mouse_exited" from="control" to="." method="_on_control_mouse_exited"]
